--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,10 +11,10 @@ jobs:
       matrix:
         version:
           - '1.6'
-          - 'nightly'
+          # - 'nightly'
         os:
           - ubuntu-latest
-          - windows-latest
+          # - windows-latest
         arch:
           - x64
           # - x86
