Add cancellation to existing runs in CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,6 +19,13 @@ jobs:
           - x64
           # - x86
     steps:
+      # Cancel ongoing tests if pushing to branch again before the previous
+      # build is finished.
+      - name: Cancel ongoing tests for previous commits
+        uses: styfle/cancel-workflow-action@0.6.0
+        with:
+          access_token: ${{ github.token }}
+
       # Checkout the code
       - uses: actions/checkout@v2
       # Setup python dependencies
