--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyCallJLD = "de320387-30cd-5f83-91a8-a6e0ae8b8444"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
