--- a/Project.toml
+++ b/Project.toml
@@ -32,11 +32,8 @@ julia = "1.6"
 [extras]
 AdaptiveResonance = "3d72adc0-63d3-4141-bf9b-84450dd0395b"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [targets]
-test = ["AdaptiveResonance", "DelimitedFiles", "Plots", "SafeTestsets", "Statistics", "Test", "UnicodePlots"]
+test = ["AdaptiveResonance", "DelimitedFiles", "Statistics", "Test"]
