--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ ScikitLearn = "3646fa90-6ef7-5e7e-9f22-8aca16db6324"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-ClusterValidityIndices = "0.2"
+ClusterValidityIndices = "0.2, 0.3"
 JLD = "0.12"
 JLD2 = "0.4"
 Parameters = "0.12"
