--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,9 @@
 name: CI
 on:
-  - push
-  - pull_request
+  push:
+    branches: [main]
+    tags: ["*"]
+  pull_request:
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
@@ -10,7 +12,8 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.6'
+          - "1.6"  # LTS
+          - "1"    # Latest Release
           # - 'nightly'
         os:
           - ubuntu-latest
