--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -63,37 +63,37 @@ jobs:
         with:
           file: lcov.info
 
-  docs:
-    name: Documentation
-    runs-on: ubuntu-latest
-    steps:
-      # Checkout the code
-      - uses: actions/checkout@v2
-      # Setup python dependencies
-      - name: Install scikit-learn
-        run: |
-          python -m pip install --upgrade pip
-          pip install -U scikit-learn
-      # Setup julia with the latest version
-      - uses: julia-actions/setup-julia@v1
-        with:
-          version: '1'
-      # Setup the docs julia directory
-      - run: |
-          julia --project=docs -e '
-            using Pkg
-            Pkg.develop(PackageSpec(path=pwd()))
-            Pkg.instantiate()'
-      # Run the doctests
-      - run: |
-          julia --project=docs -e '
-            using Documenter: DocMeta, doctest
-            using MetaICVI
-            DocMeta.setdocmeta!(MetaICVI, :DocTestSetup, :(using MetaICVI); recursive=true)
-            doctest(MetaICVI)'
-      # Make the documentation, pointing to the correct keys for uploading
-      - run: julia --project=docs docs/make.jl
-        env:
-          JULIA_PKG_SERVER: ""
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+  # docs:
+  #   name: Documentation
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     # Checkout the code
+  #     - uses: actions/checkout@v2
+  #     # Setup python dependencies
+  #     - name: Install scikit-learn
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -U scikit-learn
+  #     # Setup julia with the latest version
+  #     - uses: julia-actions/setup-julia@v1
+  #       with:
+  #         version: '1'
+  #     # Setup the docs julia directory
+  #     - run: |
+  #         julia --project=docs -e '
+  #           using Pkg
+  #           Pkg.develop(PackageSpec(path=pwd()))
+  #           Pkg.instantiate()'
+  #     # Run the doctests
+  #     - run: |
+  #         julia --project=docs -e '
+  #           using Documenter: DocMeta, doctest
+  #           using MetaICVI
+  #           DocMeta.setdocmeta!(MetaICVI, :DocTestSetup, :(using MetaICVI); recursive=true)
+  #           doctest(MetaICVI)'
+  #     # Make the documentation, pointing to the correct keys for uploading
+  #     - run: julia --project=docs docs/make.jl
+  #       env:
+  #         JULIA_PKG_SERVER: ""
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
