--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 ClusterValidityIndices = "0.6"
 JLD = "0.12"
 JLD2 = "0.4"
+NumericalTypeAliases = "0.2"
 Parameters = "0.12"
 ProgressMeter = "1"
 PyCall = "1"
