CompatHelper: add new compat entry for NumericalTypeAliases at version 0.2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ NumericalTypeAliases = "0.1, 0.2"
 ClusterValidityIndices = "0.6"
 JLD = "0.12"
 JLD2 = "0.4"
+NumericalTypeAliases = "0.2"
 Parameters = "0.12"
 ProgressMeter = "1"
 PyCall = "1"
