CompatHelper: bump compat for JLD to 0.13, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 ClusterValidityIndices = "0.6"
-JLD = "0.12"
+JLD = "0.12, 0.13"
 JLD2 = "0.4"
 Parameters = "0.12"
 ProgressMeter = "1"
