--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 DocStringExtensions = "0.8, 0.9"
 NumericalTypeAliases = "0.1, 0.2"
 ClusterValidityIndices = "0.6"
-JLD = "0.12"
+JLD = "0.12, 0.13"
 JLD2 = "0.4"
 Parameters = "0.12"
 ProgressMeter = "1"
