--- a/_dev/Project.toml
+++ b/_dev/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+ClusterValidityIndices = "2fefd308-f647-4698-a2f0-e90cfcbca9ad"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MetaICVI = "778c5047-3e82-4d04-81b5-6fafe2d2d704"
