--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,5 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Git = "d7ba0133-e1db-5d97-8f8c-041e4b3a1eb2"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
 MetaICVI = "778c5047-3e82-4d04-81b5-6fafe2d2d704"
