--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 ClusterValidityIndices = "0.6"
+DocStringExtensions = "0.9"
 JLD = "0.12"
 JLD2 = "0.4"
 Parameters = "0.12"
@@ -34,9 +35,9 @@ julia = "1"
 [extras]
 AdaptiveResonance = "3d72adc0-63d3-4141-bf9b-84450dd0395b"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 
 [targets]
 test = ["AdaptiveResonance", "DelimitedFiles", "Statistics", "Test", "SafeTestsets"]
