--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ JLD = "0.12"
 JLD2 = "0.4"
 NumericalTypeAliases = "0.1, 0.2"
 Parameters = "0.12"
+PrecompileSignatures = "3"
 ProgressMeter = "1"
 PyCall = "1"
 PyCallJLD = "0.2"
