--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ ProgressMeter = "1"
 PyCall = "1"
 PyCallJLD = "0.2"
 ScikitLearn = "0.6"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 julia = "1"
 
 [extras]
