--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -63,6 +63,12 @@ jobs:
         with:
           file: lcov.info
 
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: lcov.info
+
   # docs:
   #   name: Documentation
   #   runs-on: ubuntu-latest
