Add PyCallJLD2 dep

--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PrecompileSignatures = "91cefc8d-f054-46dc-8f8c-26e11d7c5411"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+PyCallJLD2 = "07b0ad8c-101f-43fe-82b6-eff101a491e1"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ScikitLearn = "3646fa90-6ef7-5e7e-9f22-8aca16db6324"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -28,6 +29,7 @@ Parameters = "0.12"
 PrecompileSignatures = "3"
 ProgressMeter = "1"
 PyCall = "1"
+PyCallJLD2 = "0.1"
 ScikitLearn = "0.6, 0.7"
 StatsBase = "0.33, 0.34"
 julia = "1"
