--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyCallJLD2 = "07b0ad8c-101f-43fe-82b6-eff101a491e1"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Rocketeer = "5e8e706b-2fa9-4c18-afb5-213c5db89150"
 ScikitLearn = "3646fa90-6ef7-5e7e-9f22-8aca16db6324"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
